# browser

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  MEMORY.md  PLAN.md  PLAN_FIX_NAVIGATION.md  PLAN_FLOW_LAYOUT.md  PLAN_INTERACTIVE_JS.md  PLAN_INTERACTIVE_REFINEMENT.md  PLAN_JS_INTEGRATION.md  PLAN_KOREAN_STYLING.md  PLAN_LAYOUT_CSS_FINALIZE.md  PLAN_MASTER_HIGH_LEVEL.md  PLAN_RENDERING_UPGRADE.md  PLAN_SCROLLING.md  PLAN_STABILITY_FIX.md  README.md  REARCHITECTURE_REPORT.md  issue_21_plan.md  storage.json  test_cssparser.rs
.agents/: PRIORITY-ARCHIVE.md  PRIORITY.md
.agents/docs/: development-workflow.md
.agents/handoffs/: 2026-04-22_08-25.md  LATEST.md  (+9 more)
docs/: METHODOLOGY_INCREMENTAL_REFINEMENT.md  PLAN_COMPLEX_ELEMENTS.md  PLAN_FUTURE_ROADMAP.md  PLAN_HIGH_FIDELITY_RENDERING.md  PLAN_HTML_CSS_PERFECTION.md  PLAN_ISSUE_12_FLEXBOX.md  PLAN_ISSUE_37.md  PLAN_ISSUE_43.md  PLAN_LIVING_ENGINE.md  PLAN_RENDERING_CONTAINMENT.md  PLAN_RENDERING_UPGRADE.md  PLAN_STYLE_FINAL_UPGRADE.md  PLAN_WEB_STANDARDS_UPGRADE.md  es-module-verification.md  issue-priority.md  js-v8-compatibility.md  tokscale-export-20260412-063222.json  tokscale-export-20260412-100907.json
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  chunks.json  cost.json  graph.html  graph.json  manifest.json
src/: css.rs  dom.rs  engine.rs  js.rs  js_bootstrap.js  layer_tree.rs  layout.rs  main.rs  matrix.rs  render.rs  style.rs
tests/: repro_failures.rs  repro_order.rs  repro_sizing.rs  test_boa.rs  test_event_loop.rs  test_event_loop_complex.rs  test_fixtures.rs  test_focus.rs  test_html_compliance.rs  test_idle.rs  test_perf_large_css.rs  test_pipeline.rs  test_storage.rs
(+62 files in other folders)
