[package]
name = "aura-browser"
version = "0.1.0"
edition = "2021"


[dependencies]
ab_glyph = "0.2.32"
cssparser = "0.37.0"
eframe = "0.29"
egui = "0.29"
html5ever = "0.38.0"
image = "0.25.10"
markup5ever_rcdom = "0.38.0"
poll-promise = "0.3.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
tiny-skia = "0.12.0"
tokio = { version = "1.51.0", features = ["full"] }
url = "2.5.8"
