[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[lib]
name = "browser"
path = "src/main.rs"


[dependencies]
ab_glyph = "0.2.32"
boa_engine = "0.21.1"
cssparser = "0.37.0"
eframe = "0.29"
egui = "0.29"
html5ever = "0.38.0"
image = { version = "0.25.10", features = ["png", "jpeg", "webp"] }
lazy_static = "1.5.0"
markup5ever_rcdom = "0.38.0"
poll-promise = "0.3.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny-skia = "0.12.0"
tokio = { version = "1.51.0", features = ["full"] }
stacker = "0.1"
url = "2.5.8"
